[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/PracticeTester/ui/UIChecksPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/PracticeTester/ui/UIPractice.gd" type="Script" id=3]
[ext_resource path="res://addons/PracticeTester/ui/UIOutputConsole.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/PracticeTester/ui/SuccessPopup.tscn" type="PackedScene" id=6]

[node name="UIPractice" type="CanvasLayer"]
layer = 100
script = ExtResource( 3 )

[node name="UIChecksPanel" parent="." instance=ExtResource( 1 )]

[node name="UIOutputConsole" parent="." instance=ExtResource( 5 )]
margin_left = -400.0
anchor_side = 1

[node name="SuccessPopup" parent="." instance=ExtResource( 6 )]
visible = false
